<resources>
    <string name="app_name">Wake On LAN</string>
    <string name="label_mac_address">MAC Address</string>
    <string name="label_broadcast_ip">Broadcast IP</string>
    <string name="button_wake">Wake Device</string>
    <string name="hint_mac_address">e.g., 00:11:22:33:44:55</string>
    <string name="hint_broadcast_ip">e.g., 192.168.1.255</string>
    <string name="message_success">Wake-on-LAN packet sent successfully</string>
    <string name="message_error">Failed to send Wake-on-LAN packet</string>
    <string name="error_invalid_mac">Invalid MAC address format</string>
    
    <!-- Update related strings -->
    <string name="update_available_title">Update Available</string>
    <string name="update_available_message">Version %1$s is available. You are using version %2$s. Would you like to update?</string>
    <string name="update_button_download">Download</string>
    <string name="update_button_cancel">Not Now</string>
    <string name="update_downloading">Downloading update…</string>
    <string name="update_download_complete">Download complete</string>
    <string name="update_download_failed">Download failed</string>
    <string name="update_install_title">Install Update</string>
    <string name="update_install_message">Would you like to install the update now?</string>
    <string name="update_button_install">Install</string>
    <string name="update_button_later">Later</string>
    <string name="update_check_failed">Could not check for updates</string>
</resources> 